<resources>
    <string name="app_name">Cooking Volume to Weight</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank"></string>

    <string name="density">grams/millilitres</string>

    <!-- CALCULATOR BUTTONS -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="enter">=</string>
    <string name="clear">CLR</string>

    <!-- TAB NAMES -->
    <string name="calculator">Calculator</string>
    <string name="substance">Substance</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <!-- UNITS IMPERIAL-->
    <string name="imper_teaspoons">teaspoons</string>
    <string name="imper_tablespoons">tablespoons</string>
    <string name="imper_grains">grains</string>
    <string name="imper_drams">drams</string>
    <string name="imper_ounces">ounces</string>
    <string name="imper_pounds">pounds</string>
    <string name="imper_fl_oz">fluid ounces</string>
    <string name="imper_pints">pints</string>
    <string name="imper_quarts">quarts</string>
    <string name="imper_gallons">gallons</string>

    <!-- UNITS METRIC -->
    <string name="metric_milligrams">milligrams</string>
    <string name="metric_centigrams">centigrams</string>
    <string name="metric_decigrams">decigrams</string>
    <string name="metric_grams">grams</string>
    <string name="metric_dekagrams">dekagrams</string>
    <string name="metric_hectograms">hectogram</string>
    <string name="metric_kilograms">kilograms</string>
    <string name="metric_tons">metric tons</string>
    <string name="metric_millilitres">millilitres</string>
    <string name="metric_centilitres">centilitres</string>
    <string name="metric_decilitres">decilitres</string>
    <string name="metric_litres">litres</string>
    <string name="metric_dekalitres">dekalitres</string>

    <!-- SUBSTANCES -->
    <string name="flour_whole_wheat">whole wheat flour (Organic)</string>
    <string name="flour_almond">almond flour</string>
    <string name="flour_barley">barley flour</string>
    <string name="flour_corn">corn flour</string>
    <string name="flour_all_purpose">flour (all purpose)</string>
    <string name="salt_rock">rock salt</string>

    <!-- PLACEHOLDERS -->
    <string name="ph_units_entry">Units (Entry)</string>
    <string name="ph_units_answer">Units (Answer)</string>
    <string name="ph_num_entry">Value (Entry)</string>
    <string name="ph_num_answer">Value (Answer)</string>
    <string name="ph_sub_name">Substance Name</string>
    <string name="ph_sub_density">Substance Density</string>
</resources>
